# adf1-framework

./: .env.example  .gitignore  .gitignore.bak  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  check_json.py  ci-preview.txt  my-pr-lines.txt  package.json  preview-metrics.ps1  pyproject.toml  pytest.ini  requirements.txt  untracked.txt
.githooks/: pre-commit  pre-commit.bat
.github/workflows/: ci.yml  deploy.yml  doc_automation.yml
adf1-plan-preview/: CHANGELOG.md  README.md  package.json
adf1-plan-preview/src/: extension.ts
apis/: main.py
core/: actions.py  actions_translation.py  agent_base.py  agent_registry.py  agents.py  capability_models.py  capability_service.py  executor.py  gemini_delegate.py  instructions_parser.py  llm_interface.py  local_llama_delegate.py  logging_config.py  metrics.py  module.py  orchestrator.py  parser.py  preview_tools.py  reporting.py  sandbox_runner.py  schema_loader.py  translation_agent.py  translation_engine.py  validator.py  venv_guard.py
core/instructions/: demo.json.bak  real-world-001.json  translation_app_stub,json
core/providers/: gemini.py  gemini_provider.py
core/sandbox-image/: execute.py  test_patch_restore.py
core/sandbox_image/: dockerfile  execute.py  restore_backup.py  test_patch_restore.py
deployments/: Dockerfile
frontend/src/components/: ConversationScreen.tsx  ConversationView.tsx  MicCapture.tsx  MicCaptureServerFallback.tsx  MicServerFallback.tsx  SettingsPanel.tsx  SmartMicCapture.tsx
frontend/src/lib/: api.tsx
frontend/src/screens/: Home.tsx  Join.tsx
instructions/: README.md  big-trial.json  demo.json  schema.json  session19_voice_io_logbook.md  translation_run_demo.json
open-swe-main/: README.md
scripts/: check_instructions.py  create_rollback_tags.ps1  dry_run_log_demo.py  dry_run_translation.py  install_precommit.ps1  live_preview.py  preview-metrics.ps1  preview_metrics.py  repro_patch.py  run-dev.ps1  run_sync_action_map.py  sync_action_map.py
security/: validation.py
src/: PlanTreeProvider.ts  extension.ts  workflowstatus.ts
src/api/: main.py
src/core/executor/: voice_io.py
src/core/providers/: gemini.py  translate.py
src/utils/: config.py
tests/: action_map.json  conftest.py  test_api.py  test_capability_models.py  test_cart.py  test_docs.py  test_instruction_loader.py  test_instructions_parser.py  test_orchestrator.py  test_orchestrator_ingest.py  test_readme.py  test_security.py  test_translation_agent,py  test_translation_agent.py  test_translation_engine.py  test_translation_init.py  test_translation_process.py  test_translation_text_real.py  test_translator.py  test_validator.py  translation_init.py
tests/actions/: test_noop.py  test_noop2.py  test_validate.py
tests/mocks/: mock_translate_client.py
tests/translation/: test_translate_text,py
tools/: gen_placeholder_test.py  gen_placeholder_tests.py
