# PEP 621 standardized project metadata. This is the modern, preferred way
# to declare core information for tools like pip and build.
[project]
name = "adf1-framework"
version = "0.1.0"
description = "Cockpit‑style orchestration framework with stub/mock/live translation modes."
authors = [
    { name = "Basil Example", email = "basil@example.com" }
]
requires-python = ">=3.13"
dependencies = [
  # Duplicated from [tool.poetry.dependencies] for PEP 621 compliance
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.1,<0.31.0",
  "pydantic>=2.7.1,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "requests>=2.32.2,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "aiofiles>=23.2.1,<24.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "tenacity>=8.4.1,<9.0.0",
  "rich>=13.7.1,<14.0.0",
  "loguru>=0.7.2,<0.8.0",
  "typing-extensions>=4.12.0,<5.0.0",
  "ruff>=0.4.8,<0.5.0",
  "isort>=5.13.2,<6.0.0",
  "black>=24.4.2,<25.0.0",
  "pytest>=8.2.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<0.24.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-xdist>=3.6.1,<4.0.0",
  "coverage>=7.5.3,<8.0.0"
]

# This section now only contains Poetry-specific settings.
# Core metadata is inherited from the [project] section.
[tool.poetry]
# name, version, description, and authors have been removed.

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.1", extras = ["standard"]}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
requests = "^2.32.2"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
tenacity = "^8.4.1"
rich = "^13.7.1"
loguru = "^0.7.2"
typing-extensions = "^4.12.0"
ruff = "^0.4.8"
isort = "^5.13.2"
black = {version = "^24.4.2", allow-prereleases = true}
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
coverage = "^7.5.3"

# ... rest of your file unchanged ...
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.isort]
known_first_party = [ "core", "orchestrator", "services", "api", "security", "utils" ]
combine_as_imports = true
force_sort_within_sections = true

[tool.translation_app]
enabled = false
version = "0.1.0"
capabilities = ["get_supported_languages", "translate"]