[tool.poetry]
name = "adf1-framework"
version = "0.1.0"
description = "AI Delegation Framework with voice I/O and translation"
authors = ["Basil <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
firebase-admin = "^6.5.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
openai = "^1.30.0"
google-generativeai = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.3.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
